Fix: changed css style for Right alignment

--- a/component-library/components/sections/contact-block/contact-block.scss
+++ b/component-library/components/sections/contact-block/contact-block.scss
@@ -84,7 +84,8 @@
         }
   
         #{$c}__map-wrapper {
-          grid-column: 1 / 8;
+          grid-column: auto / 8;
+          justify-self:end;
           grid-row: 1;
         }
       }
